; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_core.c_core_loop.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_core.c_core_loop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.context = type { i32, i32, i32 }

@NC_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @core_loop(%struct.context* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.context*, align 8
  %4 = alloca i32, align 4
  store %struct.context* %0, %struct.context** %3, align 8
  %5 = load %struct.context*, %struct.context** %3, align 8
  %6 = getelementptr inbounds %struct.context, %struct.context* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.context*, %struct.context** %3, align 8
  %9 = getelementptr inbounds %struct.context, %struct.context* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @event_wait(i32 %7, i32 %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %24

16:                                               ; preds = %1
  %17 = load %struct.context*, %struct.context** %3, align 8
  %18 = call i32 @core_timeout(%struct.context* %17)
  %19 = load %struct.context*, %struct.context** %3, align 8
  %20 = getelementptr inbounds %struct.context, %struct.context* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @stats_swap(i32 %21)
  %23 = load i32, i32* @NC_OK, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %16, %14
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @event_wait(i32, i32) #1

declare dso_local i32 @core_timeout(%struct.context*) #1

declare dso_local i32 @stats_swap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
